# world-time

./: CMakeLists.txt  README.md  timezones  timezones.h
include/: app.h  day.h  month.h  status.h  timezn.h  timezns.h  timezones.h  world_time.h
src/: CMakeLists.txt  app.cpp  main.cpp  timezn.cpp  timezns.cpp  world_time.cpp
